# pycep

./: .gitignore  LICENSE.md  README.md  pyproject.toml
ceppy/: __init__.py  cep_service_loader.py  ceppy.py
ceppy/adapters/: http_response.py  httpx_client.py
ceppy/protocols/: http_client.py  query_service.py  service_loader.py
ceppy/services/: correios.py  opencep.py  viacep.py
pycep/: __init__.py  cep_data.py  cep_service_loader.py  pycep.py
pycep/adapters/: aiohttp_client.py  http_response.py  httpx_client.py
pycep/protocols/: http_client.py  query_service.py  service_loader.py
pycep/services/: apicep.py  brasilapi.py  correios.py  opencep.py  viacep.py
tests/: helpers.py  test_aiohttp_client.py  test_cep_data.py  test_correrios_service.py  test_open_cep.py  test_pycep.py  test_service_loader.py  test_viacep.py
tests/helpers/: __init__.py  fake_http_client.py  fake_query_service.py  helpers.py  incompatible_query_service.py
